--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ base {
     archivesName = project.archives_base_name
 }
 
+loom {
+    accessWidenerPath = file("src/main/resources/inkexpansion.accesswidener")
+}
 
 repositories {
     exclusiveContent {
@@ -41,6 +44,7 @@ dependencies {
     include(implementation(annotationProcessor("com.github.bawnorton.mixinsquared:mixinsquared-fabric:0.2.0")))
 
     modCompileOnly "maven.modrinth:defile:1.0.2-1.20.1"
+    modCompileOnly "maven.modrinth:ratatouille:1.0.9-1.20.1"
     modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:5.2.3"
     modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-world:5.2.3"
     modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:5.2.3"
