--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.20.1
 yarn_mappings=1.20.1+build.10
 loader_version=0.16.13
 # Mod Properties
-mod_version=1.0-SNAPSHOT
+mod_version=1.0.0
 maven_group=com.pulsar
 archives_base_name=inkexpansion
 # Dependencies
